--- a/staff/carolina-zhou/precourse/Tema 7/index.css
+++ b/staff/carolina-zhou/precourse/Tema 7/index.css
@@ -10,6 +10,7 @@ table {
   margin: auto;
   border: 1px solid grey;
   border-collapse: collapse;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 
