added simple semantic blog layout

--- a/staff/juan-bovo/blog-layout/style.css
+++ b/staff/juan-bovo/blog-layout/style.css
@@ -98,7 +98,7 @@ aside > *{
     display: block;
     text-align: center;
     text-decoration: none;
-    color: whitesmoke;
+    color: #333;
 }
 
 footer {
