--- a/staff/carolina-zhou/blog-layout/style.css
+++ b/staff/carolina-zhou/blog-layout/style.css
@@ -85,9 +85,12 @@ nav a:hover {
 
 .main-content {
     flex: 4;
+    padding: 40px;
 }
 
 article {
+    background-color: rgb(218, 218, 218);
+    margin: 2em;
     padding: 35px;
 }
 
@@ -108,7 +111,7 @@ label {
 }
 
 textarea {
-    width: 100%;
+    width: 96%;
     margin-top: 0.5em;
     border-radius: 5px;
     padding: 15px;
@@ -121,7 +124,6 @@ textarea {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin-left: 4em;
 }
 
 .archive {
