--- a/staff/jorge-garces/blog-layout/style.css
+++ b/staff/jorge-garces/blog-layout/style.css
@@ -5,8 +5,10 @@
 }
 
 header {
+  position: fixed;
   width: 100%;
   box-shadow: 8px 7px 12px -1px rgba(0, 0, 0, 0.75);
+  background-color: rgba(255, 255, 255, 0.876);
 }
 
 .navi {
@@ -26,6 +28,11 @@ header {
   color: white;
 }
 
+article,
+aside {
+  margin-top: 250px;
+}
+
 main {
   display: grid;
   grid-template-rows: 1fr;
@@ -42,6 +49,15 @@ h2 {
 h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
+}
+
+h4 {
+  color: rgb(89, 160, 241);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h4 .tags {
+  color: rgb(62, 60, 197);
 }
 
 h5 {
@@ -87,8 +103,11 @@ aside p {
 }
 
 aside h3 {
+  background: rgb(89, 160, 241);
+  color: white;
   text-align: left;
   padding-left: 10px;
+  padding: 10px;
 }
 
 aside {
@@ -96,6 +115,5 @@ aside {
 }
 
 aside img {
-  /* height: 10rem; */
   width: 17rem;
 }
