add submit button to comment section

--- a/staff/carolina-zhou/blog-layout/style.css
+++ b/staff/carolina-zhou/blog-layout/style.css
@@ -118,6 +118,14 @@ textarea {
     font-family: Arial;
  }
 
+ button {
+     background-color: black;
+     color: white;
+     margin-top: 1em;
+     border: none;
+     padding: 5px;
+ }
+
 .side-content {
     display: flex;
     flex: 1;
