--- a/staff/jorge-rodri/blog-layout/style.css
+++ b/staff/jorge-rodri/blog-layout/style.css
@@ -36,19 +36,19 @@ article{
 form{
     box-sizing: content-box;
 }
-textarea{
+textarea:active{
     border: 4px inset;
     border-radius: 3px;
+    content: "";
 }
 input{
     background-color: cornflowerblue;
     border: none;
-    padding: 8px 10px;
+    padding: 8px 15px;
     box-sizing: border-box;
-    text-align: center;
-    width: 25%;
-    margin-right: 10vw;
-    margin-left:  0.5vw;
+    width: 265px;
+    margin-right: 15px;
+    margin-left:  0.5px;
 }
 aside{
     border: 4px outset cornflowerblue;
