--- a/staff/manuel-galvez/blog-layout/style.css
+++ b/staff/manuel-galvez/blog-layout/style.css
@@ -43,6 +43,11 @@ nav>ul>li {
     margin:10px;
 }
 
+a {
+    text-decoration:none;
+    color:turquoise;
+}
+
 main {
     background-color: rgba(222, 224, 227, .7);
     height:85vh;
@@ -78,23 +83,99 @@ aside {
 article {
     flex:2;
     background:white;
-    width:65%;
     margin:25px;
-    box-shadow: rgba(0, 0, 0, 0.06);
+    box-shadow: rgba(0, 0, 0, 0.5);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     color:rgb(51, 51, 51);
     font-size:14px;
+    display:flex;
+    align-items:center;
+    min-height:100px;
 }
-
 .pagination {
     flex:1;
+}
+
+.profile-container {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:flex-start;
+    padding:20px;
+    height:400px;
+}
+
+.profile-img {
+    flex:2;
+}
+
+.profile-img>img {
+    object-fit:cover;
+    height:100px;
+    width:100px;
+}
+
+.about-me-header {
+    flex:1;
+    font-size:16px;
+    font-weight:bold;
+}
+
+.about-me-content {
+    flex:4;
+    text-overflow:ellipsis;
+    overflow:hidden;
+}
+
+
+.article-img {
+    flex:1;
+    object-fit:cover;
+    padding-left:20px;
+}
+
+.article-img>img {
+    width:20vh;
+    background:grey;
+}
+
+.article-content {
+    flex:4;
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    margin-bottom:20px;
+}
+
+.article-title {
+    flex:2;
+    margin-top:20px;
+
+}
+.article-publish {
+    flex:2;
+    justify-self:flex-start;
+    font-size:12px;
+    color: rgba(0,0,0, 0.5);
+}
+.article-intro {
+    flex:2;
+    font-size:15px;
+    padding-right:5vw;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    padding-bottom:20px;
 }
 
 footer {
     background:white;
     width:100%;
-    height:5vh;
+    height:20px;
+    font-size: 12px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
