--- a/staff/oihane-unciti/blog-layout/style.css
+++ b/staff/oihane-unciti/blog-layout/style.css
@@ -20,6 +20,11 @@ main {
 }
 
 footer{
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
     text-align: center;
     background-color: black;
     color: white;
