--- a/staff/sylvain-legrill/blog-layout/style.css
+++ b/staff/sylvain-legrill/blog-layout/style.css
@@ -22,7 +22,6 @@ header img {
 	display: inline;
 	font-family: Arial, Helvetica, sans-serif;
 	background: lightblue;
-	border-inline-color;
     border-radius: 3px;
     padding: 10px 20px;
     margin: 10px;
@@ -82,6 +81,17 @@ aside p {
     text-align: justify;
     margin-bottom: 1.3rem;
   }
+
+.populararticle li {
+    
+	font-family: Arial, Helvetica, sans-serif;
+	background: lightblue;
+    border-radius: 3px;
+    padding: 10px 20px;
+    margin: 10px;
+    color: white;
+
+} 
 
 footer {
 	color: white;
