--- a/staff/christian-haag/blog-layout/style.css
+++ b/staff/christian-haag/blog-layout/style.css
@@ -5,6 +5,7 @@
 html {
   height: 100vh;
   overflow-x: hidden;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body {
   text-align: center;
@@ -25,7 +26,14 @@ body {
     "aside article"
     "footer footer";
 }
+a {
+  text-decoration: none;
+  color: black;
+}
 
+a:hover {
+  color: white;
+}
 img {
   float: left;
   margin: 10px 25px;
