--- a/staff/manuel-galvez/blog-layout/style.css
+++ b/staff/manuel-galvez/blog-layout/style.css
@@ -6,21 +6,22 @@
 }
 
 header {
-    height:10vh;
     width:100%;
-    border-bottom: 1px solid rgba(0,0,0, .1)
+    border-bottom: 1px solid rgba(0,0,0, .2)
 }
 
 nav {
     display:flex;
     height:100%;
-    justify-content:flex-end;
-    align-items:center;
+    justify-content:center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 .logo {
-    flex:1;
-    text-align:right;
+    flex:2;
+    display:flex;
+    justify-content:center;
 }
 
 .logo>img {
@@ -29,11 +30,11 @@ nav {
 }
 
 nav>ul {
-    flex:3;
+    height:100px;
+    flex:2;
     display:flex;
     justify-content:center;
-    align-items:center;
-    margin-top:2vh;
+    align-items:flex-end;
 }
 
 nav>ul>li {
@@ -50,40 +51,83 @@ a {
 
 main {
     background-color: rgba(222, 224, 227, .7);
-    height:85vh;
+    height:100%;
     display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
 }
 
 aside {
     flex:2;
     display:flex;
     justify-content:center;
-}
-
-.profile-container {
-    height:50vh;
-    width:200px;
-    background:white;
-    box-shadow: rgba(0, 0, 0, 0.06);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    margin-top:6.5vh;
+    margin-top:10px;
 }
 
 .article-container {
     flex:5;
     display:flex;
     flex-direction:column;
-    justify-content: space-between;
-    margin-top:4vh;
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+.article-img {
+    flex:1;
+    object-fit:cover;
+    padding: 20px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.article-img>img {
+    height:18vh;
+    background:grey;
+}
+
+.article-content {
+    flex:3;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    padding:20px;
+}
+
+.article-title {
+    flex:1;
+
+}
+.article-publish {
+    flex:1;
+    font-size:12px;
+    color: rgba(0,0,0, 0.5);
+    margin-bottom:20px;
+}
+
+.article-intro {
+    flex:1;
+    font-size:15px;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    padding-bottom:20px;
+    min-width:200px;
+}
+
+.profile-container {
+
+
+}
+
+.article-container {
+    flex:5;
+    display:flex;
+    flex-direction:column;
 }
 
 article {
-    flex:2;
+    flex:1;
     background:white;
-    margin:25px;
     box-shadow: rgba(0, 0, 0, 0.5);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -93,35 +137,52 @@ article {
     font-size:14px;
     display:flex;
     align-items:center;
-    min-height:100px;
+    text-overflow:ellipsis;
+    flex-wrap:wrap;
+    padding:5px;
+    margin:10px;
 }
 .pagination {
     flex:1;
 }
 
 .profile-container {
+    flex:1;
     display:flex;
     flex-direction:column;
     align-items:center;
-    justify-content:flex-start;
+    justify-content:center;
     padding:20px;
-    height:400px;
+    width: 100%;
+    height:55vh;
+    margin:10px;
+    background:white;
+    box-shadow: rgba(0, 0, 0, 0.06);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .profile-img {
-    flex:2;
+    flex:3;
 }
 
 .profile-img>img {
     object-fit:cover;
-    height:100px;
-    width:100px;
+    height:180px;
+    width:180px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .about-me-header {
-    flex:1;
-    font-size:16px;
+    flex:2;
+    font-size:25px;
     font-weight:bold;
+    margin-top:10px;
 }
 
 .about-me-content {
@@ -130,50 +191,10 @@ article {
     overflow:hidden;
 }
 
-
-.article-img {
-    flex:1;
-    object-fit:cover;
-    padding-left:20px;
-}
-
-.article-img>img {
-    width:20vh;
-    background:grey;
-}
-
-.article-content {
-    flex:4;
-    height:100%;
-    display:flex;
-    flex-direction:column;
-    margin-bottom:20px;
-}
-
-.article-title {
-    flex:2;
-    margin-top:20px;
-
-}
-.article-publish {
-    flex:2;
-    justify-self:flex-start;
-    font-size:12px;
-    color: rgba(0,0,0, 0.5);
-}
-.article-intro {
-    flex:2;
-    font-size:15px;
-    padding-right:5vw;
-    text-overflow:ellipsis;
-    overflow:hidden;
-    padding-bottom:20px;
-}
-
 footer {
     background:white;
     width:100%;
-    height:20px;
+    height:60px;
     font-size: 12px;
     display:flex;
     justify-content:center;
