--- a/staff/jorge-rodri/blog-layout/style.css
+++ b/staff/jorge-rodri/blog-layout/style.css
@@ -6,14 +6,19 @@ body{
 header{
     background-image: url(https://www.bates.edu/wordpress/files/2016/07/pattern1.jpg);
     background-repeat: repeat-x;
-    background-attachment: scroll;
-    padding: 70px;
+    background-attachment: fixed;
+    height: 167px;
 }
 nav, aside{
     background-color: aquamarine;
 }
 nav{
-    padding: 15px 0 15px 8px;
+    height: 100px;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 footer{
     background-color: darkslategray;
@@ -22,10 +27,9 @@ footer{
 button{
     background-color: cornflowerblue;
     color: white;
-    margin-left: 15px;
-    padding:20px 15px;
-    width: 80px;
-    box-sizing: content-box;
+    width: 100px;
+    height: 70px;
+    margin: 10px 10px;
     border: none; 
 }
 article{
@@ -54,17 +58,22 @@ aside{
     border: 4px outset cornflowerblue;
     margin: 15px 0px;
     margin-right: 25px;
-    float: right;
     height: 50vw;
     width: 20vw;
     box-sizing: content-box;
     text-align: center; 
+    flex: 1;
 }
 li{
     list-style-type: none;
 }
-h1, h3{
+h3{
     margin:0;
+}
+h1{
+    margin: 5px;
+    display: inline-block;
+    left: 100px;
 }
 h2{
     padding: 14px;
@@ -81,6 +90,7 @@ h2{
 }
 main{
     width: 77%;
+    display: flex;
 }
 #contact{
     color: floralwhite
@@ -98,4 +108,8 @@ main{
 }
 #rote{
     float: inline-start;
+}
+section{
+    margin-right: 100px;
+    flex: 1;
 }
