--- a/staff/jaume-villarreal/mucho-layout/all/style.css
+++ b/staff/jaume-villarreal/mucho-layout/all/style.css
@@ -10,13 +10,20 @@ body{
 }
 
 header{
+    width: 100%;
     padding: 10px;
     display: flex;
-    margin-bottom: 2%;
+    margin: 0 auto 2%;
 }
 
 header .logo{
     width: 20%;
+    padding: 1% 3% 0 0;
+}
+
+header .logo img{
+    width: 100%;
+    height: auto;
 }
 
 header .header-text{
@@ -30,7 +37,7 @@ header .header-text span{
     margin-bottom: .3rem;
 }
 
-header nav{
+.max-nav{
     width: 40%;
     margin-right: 2%
 }
@@ -39,17 +46,17 @@ header nav{
     display: none;
 }
 
-header nav ul{
+.max-nav ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
 }
 
-header nav ul li{
+.max-nav ul li{
     list-style-type: none;
 }
 
-header nav ul li a{
+.max-nav ul li a{
     font-size: 1.25rem;
     color: #999; 
     margin-right: 10px;
@@ -64,19 +71,29 @@ main{
 }
 
 main article{
-    margin-bottom: .35%;
-    width: 475px;
-    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-img {
+main article , .article-text{
+    margin-bottom: .35%;
+    width: 33%;
+    height: auto;
+    overflow: hidden;
+}
+
+main article p , img {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 100%;
     height: auto;
 }
 
 .article-text{
-    width: 475px;
-    height: 350px;
+    height: 350px; 
     background-color: #f6f6f6;
     padding: 1%;
 }
@@ -128,7 +145,7 @@ footer .contact{
 }
 
 .contact address span{
-    /* font-size: 1.25rem; */
+    font-size: 1.25rem;
 }
 
 .city{
@@ -137,7 +154,7 @@ footer .contact{
 }
 
 .mail{
-    margin-bottom: 25%;
+    margin-bottom: 1.5rem;
 }
 
 .mail a{
@@ -146,5 +163,98 @@ footer .contact{
 }
 
 .postal-code{
-    border: 1px solid;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+/* ================== */
+/* BREAKPOINT 1400 */
+/* ================== */
+@media all and (max-width: 1400px){
+    *{
+        font-size: 10pt;
+    }
+
+    main{
+        justify-content: space-evenly;
+        /* align-content: stretch; */
+    }
+    
+    main article , .article-text{
+        width: 49%;
+        height: auto;
+        overflow: hidden;
+    }
+}
+
+/* ================== */
+/* BREAKPOINT 1200 */
+/* ================== */
+@media all and (max-width: 1200px){
+    *{
+        font-size: 9pt;
+    } 
+}
+
+/* ================== */
+/* BREAKPOINT 1045 */
+/* ================== */
+
+@media all and (max-width: 1045px){
+    *{
+        font-size: 8pt;
+    }
+
+    .max-nav{
+        display: none;
+    }
+
+    .min-nav{
+        flex-grow: 1;
+        display: block;
+        padding: 0 2rem;
+        font-size: 4rem;
+        font-weight: bold;
+        text-align: right;
+        color: #999;
+        margin-right: 2%
+    }
+
+    header{
+        justify-content: space-between
+    }
+
+    .header-text{
+        flex-grow: 3;
+    }
+    
+    .header-text span{
+        font-size: 5rem;
+    }
+
+    main article , .article-text{
+        margin-bottom: 1%;
+    }
+
+    .article-text h3{
+        margin-bottom: 5%;
+        padding: 2%;
+        font-size: 1.75rem;
+        color: red;
+    }
+    
+    .article-text p{
+        font-size: 1.75rem;
+        line-height: 2rem;
+        color: #333;
+        line-height: 2rem;
+        padding: 2%;
+    }
+}
+
+@media all and (max-width: 796px){
+    main article , .article-text{
+        width: 100%;
+        overflow: hidden;
+    }
 }
