--- a/staff/albert-fuente/mucho-layout/style.css
+++ b/staff/albert-fuente/mucho-layout/style.css
@@ -13,6 +13,7 @@ header{
     display: grid;
     grid-template-columns: 20% 40% 40%;
     padding: 2%;
+    
 
 }
 .barra p{
@@ -30,6 +31,14 @@ header{
 .test{
     display: none;
 }
+.one{
+    grid-column: 1/3;
+
+}
+.seven{
+    grid-column: 2/4;
+    grid-row:3/5;
+}
 
 .navlinks{
     display: flex;
@@ -37,6 +46,7 @@ header{
     justify-content: flex-end;
     align-items: flex-start;
     align-content: center;
+    flex-wrap: wrap;
 }
 .navlinks li{
     padding-right: 10px;
@@ -70,8 +80,7 @@ header{
     background-repeat: no-repeat;
     background-position: center;
     object-fit: cover;
-    width: 100%;
-    max-height: 100%;
+
 }
 .box2:hover{
     opacity:0.7;
@@ -164,6 +173,14 @@ footer{
         grid-template-columns:1fr;
         grid-gap: 3px;
         height: 500vh;;
+    }
+    .one{
+        grid-column: 1/2;
+    
+    }
+    .seven{
+        grid-column: 1/2;
+        grid-row:1/2;
     }
     .test{
         display: inline-block;
