--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/components.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/components.sass
@@ -1,2 +1,34 @@
+// MIX-IN's
+
+// RULES
 .header
     display: flex
+    border-bottom: 1px solid #ccc
+
+    &__logo 
+        border: 1px solid
+
+    &__presentation
+        display: none
+
+    &__max-nav
+        display: none; 
+
+    &__min-nav
+        width: 50%
+
+.min-nav__icon
+    width: 10%
+
+.secondary-nav
+    display: column
+    font-size: 1000px
+
+    &__services
+        color: #ccc 
+        border-bottom: 1px solid #cccccc
+
+    &__industries
+        border-bottom: 1px solid #cccccc
+
+
