--- a/staff/adria-arquimbau/mucho-layout/mobile/style.css
+++ b/staff/adria-arquimbau/mucho-layout/mobile/style.css
@@ -130,7 +130,8 @@ article img {
 
     }
     .bigImg {
-        
+        grid-column: 1 / 3;
+        grid-row: 1 / 4;
     }
 }
 
@@ -150,6 +151,10 @@ article img {
     article {
         grid-template-columns: 1fr 1fr 1fr 1fr;
 
+    }
+    .bigImg {
+        grid-column: 1 / 3;
+        grid-row: 1 / 4;
     }
 }
 
