--- a/staff/adria-arquimbau/mucho-layout/mobile/style.css
+++ b/staff/adria-arquimbau/mucho-layout/mobile/style.css
@@ -133,6 +133,10 @@ article img {
         grid-column: 1 / 3;
         grid-row: 1 / 4;
     }
+    .bigImg2 {
+        grid-column: 3 / 5;
+        grid-row: 3 / 5;
+    }
 }
 
 @media (max-width: 1200px) and (min-width: 900px) {
@@ -155,6 +159,10 @@ article img {
     .bigImg {
         grid-column: 1 / 3;
         grid-row: 1 / 4;
+    }
+    .bigImg2 {
+        grid-column: 3 / 5;
+        grid-row: 3 / 5;
     }
 }
 
