--- a/staff/adria-arquimbau/mucho-layout/mobile/style.css
+++ b/staff/adria-arquimbau/mucho-layout/mobile/style.css
@@ -7,13 +7,13 @@
     font-weight: normal;
 }
 
-body {
+.body {
     width: 99vw;
     margin: 0 auto;
     /* border: 1px solid; */
 }
 
-header {
+.header {
     flex-wrap: wrap;
     display: flex;
     padding: 20px;
