--- a/staff/adria-arquimbau/mucho-layout/mobile/style.css
+++ b/staff/adria-arquimbau/mucho-layout/mobile/style.css
@@ -97,8 +97,6 @@ footer .rrss {
     padding: 10px;
 }
 
-
-
 article {
     display: grid;
     grid-gap: 5px;
@@ -108,7 +106,11 @@ article img {
     height: 100%;
 }
 
-
+footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
 
 
 @media (min-width: 1200px) {
@@ -131,7 +133,7 @@ article img {
     }
     .bigImg {
         grid-column: 1 / 3;
-        grid-row: 1 / 4;
+        grid-row: 1 / 3;
     }
     .bigImg2 {
         grid-column: 3 / 5;
@@ -158,7 +160,7 @@ article img {
     }
     .bigImg {
         grid-column: 1 / 3;
-        grid-row: 1 / 4;
+        grid-row: 1 / 3;
     }
     .bigImg2 {
         grid-column: 3 / 5;
