--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/normalize.css
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/normalize.css
@@ -1,7 +1,13 @@
 html{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Libre Franklin', sans-serif;
-    font-size: 12px;
+    box-sizing: border-box; 
+    font-family: Helvetica,  Arial, sans-serif;
+    font-size: 16px;
+    color: #666
+}
+
+body{
+    width: 99vw;
+    margin: 0 auto;
 }
