--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/style.css
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/style.css
@@ -1,34 +1,233 @@
-.header {
+.top-navigation {
   display: flex;
-  border-bottom: 1px solid #ccc;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4.5% 5.5%;
+  bottom: 50px;
 }
-.header__logo {
-  border: 1px solid;
-}
-.header__presentation {
+.top-navigation__presentation {
   display: none;
 }
-.header__max-nav {
+.top-navigation__logo {
+  width: 5.5rem;
+}
+.top-navigation__max-nav {
   display: none;
 }
-.header__min-nav {
-  width: 50%;
+.top-navigation__min-nav {
+  width: 6%;
 }
-
-.min-nav__icon {
-  width: 10%;
+.top-navigation__min-nav .min-nav__icon {
+  width: 100%;
 }
 
 .secondary-nav {
   display: column;
-  font-size: 100;
+  width: 100%;
+}
+.secondary-nav__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 4%;
+  border-bottom: 1px solid #ccc;
+}
+.secondary-nav__row .row__title {
+  margin: 0;
+  padding: 0.75rem 0;
+  font-size: 1.25rem;
+  letter-spacing: 0.05rem;
+  color: #c0c0c0;
+}
+.secondary-nav__row .row__icon {
+  display: flex;
+  justify-content: flex-end;
+  width: 20%;
+  height: 50%;
+  overflow: hidden;
+}
+.secondary-nav__row .row__icon img {
+  width: 45%;
+  height: 50%;
+}
+
+.mosaic {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.mosaic__tile {
+  width: 100%;
+  position: relative;
+  margin: 0.5% 0;
+}
+.mosaic__tile img {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.5s ease-out;
+}
+.mosaic__tile img:hover {
+  opacity: 0.3;
+}
+.mosaic__text {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  padding: 5% 0 0 2%;
+  font-size: 1.25rem;
+}
+.mosaic__text h3 {
+  margin: 0;
+  color: black;
+  font-weight: normal;
+}
+.mosaic__text p {
+  margin: 0;
+  color: #999;
+}
+.mosaic__article {
+  width: 100%;
+  min-height: 20rem;
+  margin: 0.5% 0;
+  background-color: #f6f6f6;
+}
+.mosaic__article > h3 {
+  font-size: 0.85rem;
+  color: red;
+  padding: 2% 3%;
+  font-weight: normal;
+}
+.mosaic__article > p {
+  font-size: 1.25rem;
+  padding: 1% 3%;
+  color: #333;
+}
+
+.foot_info {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.85rem;
+  line-height: 1.25rem;
+}
+
+.contact-business {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 3rem;
+}
+.contact-business > a {
+  text-decoration: none;
+  color: inherit;
+}
+.contact-business > a:visited {
+  color: inherit;
+}
+
+.contact-set {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-card {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 3rem;
+  font-style: normal;
+  font-size: 0.9rem;
+}
+.contact-card__city {
+  font-size: 0.85rem;
+  color: #e00000;
+}
+.contact-card__phone {
+  font-size: 0.9rem;
+}
+.contact-card__mail {
+  margin-bottom: 1.5rem;
+}
+.contact-card__mail > a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-info {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column-reverse;
+  font-size: 0.9rem;
   color: #ccc;
 }
-.secondary-nav__services {
-  border-bottom: 1px solid #cccccc;
+
+.info-block {
+  display: flex;
+  margin-bottom: 0.5rem;
 }
-.secondary-nav__industries {
-  border-bottom: 1px solid #cccccc;
+.info-block__title {
+  margin-right: 2rem;
+}
+.info-block__link {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-social {
+  display: flex;
+  flex-direction: column;
+}
+
+.icon-set {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.icon-set a {
+  width: 1rem;
+  margin-right: 0.85rem;
+}
+
+@media (min-width: 561px) {
+  .mosaic {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .mosaic__tile {
+    width: 49.75%;
+    margin: 0.25% 0;
+  }
+  .mosaic__article {
+    width: 49.75%;
+  }
+}
+@media (min-width: 641px) {
+  .top-navigation__max-nav {
+    display: flex;
+  }
+  .top-navigation__min-nav {
+    display: none;
+  }
+
+  .contact-set {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .contact-card {
+    width: 49.75%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
