--- a/staff/adria-arquimbau/mucho-layout/mobile/style.css
+++ b/staff/adria-arquimbau/mucho-layout/mobile/style.css
@@ -34,43 +34,25 @@
 
 }
 
-nav {
+.nav {
     display: flex;
     padding: 20px;
     border: 1px;
     flex-direction: column;
 }
 
-
-main {
-    display: flex;
-}
-
-/* main div{
-    width:100%;
-    overflow: hidden;
-} */
-
-main div img {
-    grid-auto-flow: row;
-    width: 99.5%;
-    height: auto;
-    padding: 0%;
-
-}
-
-footer {
+.footer {
     padding: 20px;
     display: flex;
     text-align: center;
     
 }
 
-footer .cr {
+.footer .cr {
     width: 85%;
 }
 
-footer .rrss {
+.footer .rrss {
     justify-content: space-around;
     width: 15%;
     flex-wrap: wrap;
@@ -97,16 +79,16 @@ footer .rrss {
     padding: 10px;
 }
 
-article {
+.article {
     display: grid;
     grid-gap: 5px;
 }
-article img {
+.article img {
     width: 100%;
     height: 100%;
 }
 
-footer {
+.footer {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -114,20 +96,11 @@ footer {
 
 
 @media (min-width: 1200px) {
-    main div {
-        width: 20%;
-        overflow: hidden;
-    }
 
-
-
-    main {
-        flex-wrap: wrap;
-    }
     .contenedorNavInf {
         grid-template-columns: 33% 33% 33%;
     }
-    article {
+    .article {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
     }
@@ -142,19 +115,11 @@ footer {
 }
 
 @media (max-width: 1200px) and (min-width: 900px) {
-    main div {
-        width: 25%;
-        overflow: hidden;
-    }
 
-
-    main {
-        flex-wrap: wrap;
-    }
     .contenedorNavInf {
         grid-template-columns: 33% 33% 33%;
     }
-    article {
+    .article {
         grid-template-columns: 1fr 1fr 1fr 1fr;
 
     }
@@ -169,37 +134,23 @@ footer {
 }
 
 @media (max-width: 900px) and (min-width: 700px) {
-    main div {
-        width: 33%;
-        overflow: hidden;
-    }
 
-    main {
-        flex-wrap: wrap;
-    }
     .contenedorNavInf {
         grid-template-columns: 33% 33% 33%;
     }
-    article {
+    .article {
         grid-template-columns: 1fr 1fr 1fr;
 
     }
 }
 
 @media (max-width: 700px) and (min-width: 550px) {
-    main div {
-        width: 50%;
-        overflow: hidden;
-    }
 
-    main {
-        flex-wrap: wrap;
-    }
     .contenedorNavInf {
         grid-template-columns: 50% 50%;
     }
 
-    article {
+    .article {
         grid-template-columns: 1fr 1fr;
 
     }
@@ -207,10 +158,6 @@ footer {
 
 
 @media (max-width: 550px) {
-    main div {
-        width: 100%;
-        overflow: hidden;
-    }
 
     .contenedorNavInf {
         grid-template-columns: 100%;
@@ -226,10 +173,7 @@ footer {
         height: auto;
     }
 
-    main {
-        flex-direction: column;
-    }
-    article {
+    .article {
         grid-template-columns: 1fr;
 
     }
