--- a/staff/jorge-garces/mucho-layout/desktop/style.css
+++ b/staff/jorge-garces/mucho-layout/desktop/style.css
@@ -7,8 +7,8 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  width: 100%;
-  margin: 0;
+  width: 99vw;
+  margin: 0 auto;
 }
 
 .header {
@@ -54,11 +54,9 @@ body {
 
 .images {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
-  padding: 4px;
-  width: 98vw;
-  height: 100vw;
+  width: 100%;
 }
 
 .image {
@@ -86,6 +84,10 @@ body {
 .articulo p {
   color: #000;
 }
+/* 
+footer {
+  border: 10px solid;
+} */
 
 #foota {
   color: gray;
@@ -127,6 +129,7 @@ body {
   margin-bottom: 15px;
 }
 
+/* BREAKPOINTS */
 @media (min-width: 768px) {
   .header {
     border: none;
@@ -237,6 +240,10 @@ body {
     margin-right: auto;
   }
 
+  .nav {
+    display: none;
+  }
+
   .articulo {
     font-size: 1.4vw;
     height: 14.7vw;
@@ -245,12 +252,12 @@ body {
   .images {
     display: grid;
     grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(8, 15%);
+    grid-template-rows: repeat(9, 1fr);
   }
 
   .image {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
   }
 
@@ -296,11 +303,11 @@ body {
 
   .footer-links {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
   }
 
   .articulo2 {
-    width: 47%;
+    width: 24%;
   }
 
   .social {
