--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/normalize.css
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/normalize.css
@@ -2,8 +2,8 @@ html{
     margin: 0;
     padding: 0;
     box-sizing: border-box; 
-    font-family: Helvetica,  Arial, sans-serif;
-    font-size: 16px;
+    font-family: Roboto, Helvetica,  Arial, sans-serif;
+    /* font-size: 16px; */
     color: #666
 }
 
