add new rules for header styles

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-top-navigation.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-top-navigation.sass
@@ -2,7 +2,7 @@
     display: flex
     justify-content: space-between
     align-items: flewx-start
-    padding: 4.5% 5.5%
+    padding: 3% 1% 2%
     bottom: 50px
     border-bottom: 1px solid #ccc
 
