--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1024.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1024.sass
@@ -3,12 +3,12 @@ $layout-breakpoint-desktop: 1024px
 
 @media (min-width: $layout-breakpoint-desktop)
     .top-navigation
-        padding:2% .5% 1%
-            justify-content: space-around
+        padding:1.5% .5% 1%
+            justify-content: flex-start
             align-items: flex-start
         &__logo
             width: 15%
-            padding-left: 3rem
+            padding-top: 1rem
             >img
                 width: 55%
                 padding-top: .15rem
@@ -16,10 +16,14 @@ $layout-breakpoint-desktop: 1024px
         &__presentation
             display: block
             margin:0
-            padding: 1rem 0 0 1rem
+            padding: 1rem 0 0 0
             width: 45%
-            font-size: .75rem
+            font-size: .85rem
+            font-weight: 300
+            line-height: 1.25rem
             color: #999
+            >span
+                display: block
         &__max-nav
             witdh: 25%
     
