--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_640.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_640.sass
@@ -1,10 +1,10 @@
 // BREAKPOINTS
 $layout-breakpoint-medium: 641px
-$font-size: .85rem
+$font-size: .9rem
 
 @media (min-width: $layout-breakpoint-medium)
     .top-navigation
-        padding:2% 5.5% 1%
+        padding:2% 1.25% 1%
         border: 0
         &__logo>img
             padding-top: .75rem
@@ -36,7 +36,7 @@ $font-size: .85rem
 
         &__row
             border-bottom: 0
-            justify-content: flex-end
+            justify-content: space-evenly
             padding: 0
             width: 8rem
 
