--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-secondary-nav.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-secondary-nav.sass
@@ -7,7 +7,7 @@
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 0 4%
+        padding: 0 0 0 4%
         border-bottom: 1px solid #ccc
 
         .row__title
