--- a/staff/jorge-garces/mucho-layout/desktop/style.css
+++ b/staff/jorge-garces/mucho-layout/desktop/style.css
@@ -6,6 +6,7 @@
   color: rgb(170, 170, 170);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 body {
   width: 99vw;
   margin: 0 auto;
@@ -14,37 +15,39 @@ body {
 .header {
   display: flex;
   justify-content: flex-start;
-  padding: 15px 0px 10px 20px;
+  padding: 25px 0px 10px 20px;
   border-bottom: 1px solid rgba(128, 128, 128, 0.452);
 }
 
-#logo {
+.header__logo {
   width: 4.5rem;
+  align-self: flex-start;
 }
 
-#hamburger {
+.header__hamburger {
   margin: 15px 15px 10px auto;
 }
 
-.navi {
+.header__navigation-top {
   display: none;
 }
 
-.info-header {
-  display: none;
-}
-
-.nav {
+.header__navigation-bottom {
   display: flex;
   justify-content: flex-start;
   border-bottom: 1px solid rgba(128, 128, 128, 0.452);
-}
-
-.nav p {
   font-size: 0.9rem;
 }
 
-#enlace {
+.header__info {
+  display: none;
+}
+
+.navlist {
+  display: none;
+}
+
+.nav-helper__link {
   margin: 10px auto 10px 15px;
 }
 
@@ -52,18 +55,18 @@ body {
   margin: 14px 18px 0px 0px;
 }
 
-.images {
+.mosaic {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
   width: 100%;
 }
 
-.image {
+.mosaic__image {
   padding: 2px;
 }
 
-.images img {
+.mosaic img {
   width: 100%;
   height: 100%;
 }
@@ -75,21 +78,17 @@ body {
   height: 50vw;
 }
 
-.articulo h4 {
+.articulo__h4 {
   font-size: 0.8rem;
   color: rgba(209, 22, 22, 0.815);
   margin-bottom: 25px;
 }
 
-.articulo p {
+.articulo__p {
   color: #000;
 }
-/* 
-footer {
-  border: 10px solid;
-} */
 
-#foota {
+.footer__text {
   color: gray;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.8rem;
@@ -98,18 +97,18 @@ footer {
   color: rgba(0, 0, 0, 0.657);
 }
 
-.articulo2 h4 {
-  font-family: Arial, Helvetica, sans-serif;
-  color: red;
-  font-size: 0.7rem;
-}
-
 .articulo2 {
   margin-bottom: 20px;
   padding: 20px;
 }
 
-.articulo2 p {
+.articulo2__title {
+  font-family: Arial, Helvetica, sans-serif;
+  color: red;
+  font-size: 0.8rem;
+}
+
+.articulo2__content {
   color: gray;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.8rem;
@@ -120,12 +119,12 @@ footer {
   margin-bottom: 30px;
 }
 
-.social p {
+.social__content {
   font-size: 0.8rem;
   margin-bottom: 15px;
 }
 
-.social .icons {
+.social__icons {
   margin-bottom: 15px;
 }
 
@@ -135,27 +134,27 @@ footer {
     border: none;
   }
 
-  .nav {
+  .header__navigation-bottom {
     border: 0px;
   }
 
-  #hamburger {
-    display: none;
+  .header__hamburger {
+    display: none !important;
   }
 
-  .navi {
+  .header__navigation-top {
     display: flex;
   }
 
   .navlist {
     display: flex;
     list-style: none;
-    margin: 10px;
-    padding: 10px;
+    /* margin: 10px;
+    padding: 10px; */
     font-size: 0.8rem;
   }
 
-  .navlist li {
+  .navlist__item {
     padding-right: 15px;
   }
 
@@ -163,7 +162,7 @@ footer {
     justify-content: space-between;
   }
 
-  nav {
+  .nav-helper {
     display: flex;
     justify-content: flex-end;
   }
@@ -173,11 +172,11 @@ footer {
     padding-left: 10px;
   }
 
-  .image {
+  .mosaic__image {
     width: 50%;
   }
 
-  .images img {
+  .mosaic img {
     max-width: 100%;
     max-height: 100%;
   }
@@ -187,7 +186,7 @@ footer {
     flex-wrap: wrap;
   }
 
-  .footer-links {
+  .footer__links {
     display: flex;
     flex-wrap: wrap;
   }
@@ -223,25 +222,31 @@ footer {
     margin-right: 15px;
   }
 
-  footer #foota {
+  .footer__text {
     font-size: 1.4rem;
   }
 }
 
-@media (min-width: 1024px) {
-  .info-header {
+@media (min-width: 1025px) {
+  .header {
     display: flex;
-    font-size: 0.8rem;
-    padding: 0px 40px 0px 100px;
-    text-align: justify;
-    justify-content: flex-start;
-    max-width: 30rem;
-    margin-top: 30px;
-    margin-right: auto;
+    justify-content: space-between;
+    /* justify-content: space-between; */
   }
 
-  .nav {
+  .header__info {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    font-size: 1.5vw;
+  }
+
+  .nav-helper {
     display: none;
+  }
+
+  .navlist {
+    margin: 0;
   }
 
   .articulo {
@@ -249,13 +254,13 @@ footer {
     height: 14.7vw;
   }
 
-  .images {
+  .mosaic {
     display: grid;
     grid-template-columns: repeat(4, 25%);
     grid-template-rows: repeat(9, 1fr);
   }
 
-  .image {
+  .mosaic__image {
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -301,7 +306,7 @@ footer {
     flex-wrap: wrap;
   }
 
-  .footer-links {
+  .footer__links {
     display: flex;
     /* flex-wrap: wrap; */
   }
@@ -333,7 +338,7 @@ footer {
     margin-right: 15px;
   }
 
-  footer #foota {
+  .footer__text {
     font-size: 1.4rem;
   }
 }
